Bug 218308 - kopete unusually closed doing nothing only has crashed
Summary: kopete unusually closed doing nothing only has crashed
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.80.2
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-11 18:20 UTC by d.bernardy
Modified: 2013-11-24 10:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description d.bernardy 2009-12-11 18:20:26 UTC
Application that crashed: kopete
Version of the application: 0.80.2
KDE Version: 4.3.2 (KDE 4.3.2)
Qt Version: 4.5.2
Operating System: Linux 2.6.31-16-generic x86_64
Distribution: Ubuntu 9.10

 -- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f46cafa1750 (LWP 17030))]

Thread 2 (Thread 0x7f46b02d6910 (LWP 17032)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:261
#1  0x00007f46c87794fb in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x1784318, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x1784318, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007f46c5b7078c in QHostInfoAgent::run (this=0x1784300) at kernel/qhostinfo.cpp:260
#4  0x00007f46c8778445 in QThreadPrivate::start (arg=0x1784300) at thread/qthread_unix.cpp:188
#5  0x00007f46c2de8a04 in start_thread (arg=<value optimized out>) at pthread_create.c:300
#6  0x00007f46c75c67bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f46cafa1750 (LWP 17030)):
[KCrash Handler]
#5  0x00007f46ca6c1a71 in Kopete::PropertyContainer::hasProperty(QString const&) const () from /usr/lib/libkopete.so.4
#6  0x00007f46ca6a5b54 in Kopete::nameFromContact(Kopete::Contact*) () from /usr/lib/libkopete.so.4
#7  0x00007f46ca6a5cc0 in Kopete::MetaContact::setDisplayNameSourceContact(Kopete::Contact*) () from /usr/lib/libkopete.so.4
#8  0x00007f46c9f7db13 in ?? () from /usr/lib/libkopetecontactlist.so.1
#9  0x00007f46c9f7eab4 in ?? () from /usr/lib/libkopetecontactlist.so.1
#10 0x00007f46c8873ddc in QMetaObject::activate (sender=0x2e9ef10, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x2e88d2a) at kernel/qobject.cpp:3113
#11 0x00007f46c93e74a8 in KDialog::slotButtonClicked (this=0x2e9ef10, button=4) at ../../kdeui/dialogs/kdialog.cpp:853
#12 0x00007f46c93e96b9 in KDialog::qt_metacall (this=0x2e9ef10, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffad661c10) at ./kdialog.moc:184
#13 0x00007f46c9f7ea80 in ?? () from /usr/lib/libkopetecontactlist.so.1
#14 0x00007f46c8873ddc in QMetaObject::activate (sender=0x2d1cbe8, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x2e88d2a) at kernel/qobject.cpp:3113
#15 0x00007f46c887690e in QSignalMapper::mapped (this=0x1, _t1=4) at .moc/release-shared/moc_qsignalmapper.cpp:95
#16 0x00007f46c8877b00 in QSignalMapper::map (this=0x2d1cbe8, sender=0x2c610a0) at kernel/qsignalmapper.cpp:266
#17 0x00007f46c8877d70 in QSignalMapper::qt_metacall (this=0x2d1cbe8, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffad661da0) at .moc/release-shared/moc_qsignalmapper.cpp:81
#18 0x00007f46c8873ddc in QMetaObject::activate (sender=0x2c610a0, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x2e88d2a) at kernel/qobject.cpp:3113
#19 0x00007f46c83088e7 in QAbstractButton::clicked (this=0x1, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:200
#20 0x00007f46c806a41b in QAbstractButtonPrivate::emitClicked (this=0x2e70130) at widgets/qabstractbutton.cpp:543
#21 0x00007f46c806c02b in QAbstractButtonPrivate::click (this=0x2e70130) at widgets/qabstractbutton.cpp:536
#22 0x00007f46c806c275 in QAbstractButton::mouseReleaseEvent (this=0x2c610a0, e=0x7fffad6624c0) at widgets/qabstractbutton.cpp:1115
#23 0x00007f46c7d559c0 in QWidget::event (this=0x2c610a0, event=0x7fffad6624c0) at kernel/qwidget.cpp:7549
#24 0x00007f46c7d06efc in QApplicationPrivate::notify_helper (this=0xf7dac0, receiver=0x2c610a0, e=0x7fffad6624c0) at kernel/qapplication.cpp:4056
#25 0x00007f46c7d0e011 in QApplication::notify (this=<value optimized out>, receiver=0x2c610a0, e=0x7fffad6624c0) at kernel/qapplication.cpp:3758
#26 0x00007f46c9472ab6 in KApplication::notify (this=0x7fffad666e70, receiver=0x2c610a0, event=0x7fffad6624c0) at ../../kdeui/kernel/kapplication.cpp:302
#27 0x00007f46c885ec2c in QCoreApplication::notifyInternal (this=0x7fffad666e70, receiver=0x2c610a0, event=0x7fffad6624c0) at kernel/qcoreapplication.cpp:610
#28 0x00007f46c7d0d8e0 in QCoreApplication::sendSpontaneousEvent (receiver=0x2c610a0, event=0x7fffad6624c0, alienWidget=0x2c610a0, nativeWidget=0x2e9ef10, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#29 QApplicationPrivate::sendMouseEvent (receiver=0x2c610a0, event=0x7fffad6624c0, alienWidget=0x2c610a0, nativeWidget=0x2e9ef10, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at kernel/qapplication.cpp:2924
#30 0x00007f46c7d73a0e in QETWidget::translateMouseEvent (this=0x2e9ef10, event=<value optimized out>) at kernel/qapplication_x11.cpp:4409
#31 0x00007f46c7d72aa9 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fffad663ff0) at kernel/qapplication_x11.cpp:3550
#32 0x00007f46c7d9bd0c in x11EventSourceDispatch (s=<value optimized out>, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#33 0x00007f46c3039bbe in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#34 0x00007f46c303d588 in ?? () from /lib/libglib-2.0.so.0
#35 0x00007f46c303d6b0 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#36 0x00007f46c88871a6 in QEventDispatcherGlib::processEvents (this=0xf57560, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#37 0x00007f46c7d9b4be in QGuiEventDispatcherGlib::processEvents (this=0x1, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#38 0x00007f46c885d532 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#39 0x00007f46c885d904 in QEventLoop::exec (this=0x7fffad664320, flags=) at kernel/qeventloop.cpp:201
#40 0x00007f46c81819de in QDialog::exec (this=0x2e9ef10) at dialogs/qdialog.cpp:498
#41 0x00007f46c9f77790 in KopeteContactListView::showItemProperties() () from /usr/lib/libkopetecontactlist.so.1
#42 0x00007f46c9f7b325 in KopeteContactListView::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkopetecontactlist.so.1
#43 0x00007f46c8873ddc in QMetaObject::activate (sender=0x137c6a0, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x2e88d2a) at kernel/qobject.cpp:3113
#44 0x00007f46c7d010a7 in QAction::triggered (this=0x1, _t1=false) at .moc/release-shared/moc_qaction.cpp:236
#45 0x00007f46c7d024ef in QAction::activate (this=0x137c6a0, event=<value optimized out>) at kernel/qaction.cpp:1160
#46 0x00007f46c80eeecd in QMenuPrivate::activateCausedStack (this=<value optimized out>, causedStack=..., action=0x137c6a0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:967
#47 0x00007f46c80f4dea in QMenuPrivate::activateAction (this=0x13cc1f0, action=0x137c6a0, action_e=QAction::Trigger, self=<value optimized out>) at widgets/qmenu.cpp:1060
#48 0x00007f46c95452be in KMenu::mouseReleaseEvent (this=0x13e70a0, e=0x11ef000) at ../../kdeui/widgets/kmenu.cpp:456
#49 0x00007f46c7d559c0 in QWidget::event (this=0x13e70a0, event=0x7fffad664f60) at kernel/qwidget.cpp:7549
#50 0x00007f46c80f75ab in QMenu::event (this=0x13e70a0, e=0x7fffad664f60) at widgets/qmenu.cpp:2353
#51 0x00007f46c7d06efc in QApplicationPrivate::notify_helper (this=0xf7dac0, receiver=0x13e70a0, e=0x7fffad664f60) at kernel/qapplication.cpp:4056
#52 0x00007f46c7d0e011 in QApplication::notify (this=<value optimized out>, receiver=0x13e70a0, e=0x7fffad664f60) at kernel/qapplication.cpp:3758
#53 0x00007f46c9472ab6 in KApplication::notify (this=0x7fffad666e70, receiver=0x13e70a0, event=0x7fffad664f60) at ../../kdeui/kernel/kapplication.cpp:302
#54 0x00007f46c885ec2c in QCoreApplication::notifyInternal (this=0x7fffad666e70, receiver=0x13e70a0, event=0x7fffad664f60) at kernel/qcoreapplication.cpp:610
#55 0x00007f46c7d0d8e0 in QCoreApplication::sendSpontaneousEvent (receiver=0x13e70a0, event=0x7fffad664f60, alienWidget=0x0, nativeWidget=0x13e70a0, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#56 QApplicationPrivate::sendMouseEvent (receiver=0x13e70a0, event=0x7fffad664f60, alienWidget=0x0, nativeWidget=0x13e70a0, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>)
    at kernel/qapplication.cpp:2924
#57 0x00007f46c7d73e2e in QETWidget::translateMouseEvent (this=0x13e70a0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4343
#58 0x00007f46c7d72aa9 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fffad666a90) at kernel/qapplication_x11.cpp:3550
#59 0x00007f46c7d9bd0c in x11EventSourceDispatch (s=<value optimized out>, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#60 0x00007f46c3039bbe in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#61 0x00007f46c303d588 in ?? () from /lib/libglib-2.0.so.0
#62 0x00007f46c303d6b0 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#63 0x00007f46c88871a6 in QEventDispatcherGlib::processEvents (this=0xf57560, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#64 0x00007f46c7d9b4be in QGuiEventDispatcherGlib::processEvents (this=0x1, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#65 0x00007f46c885d532 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#66 0x00007f46c885d904 in QEventLoop::exec (this=0x7fffad666dc0, flags=) at kernel/qeventloop.cpp:201
#67 0x00007f46c885fab9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#68 0x00000000004157f6 in _start ()
The current source language is "auto; currently asm".
The current source language is "auto; currently c".

Reported using DrKonqi
Comment 1 Dario Andres 2009-12-17 00:22:00 UTC
This looks somehow related to bug 204711 Thanks
Comment 2 Pali Rohár 2013-11-18 09:23:23 UTC
Git commit 2301331ccf4a5eee71816c079667e3941cdbb3e2 by Pali Rohár.
Committed on 18/11/2013 at 09:22.
Pushed by pali into branch 'master'.

Do not try to sync metacontact which has display name source from NULL contact
Related: bug 254494, bug 277606, bug 290171

M  +1    -1    libkopete/kopetemetacontact.cpp

http://commits.kde.org/kopete/2301331ccf4a5eee71816c079667e3941cdbb3e2
Comment 3 Pali Rohár 2013-11-24 10:33:20 UTC
Git commit 1f1bf7b606915520832c386d151ddae7a5add6e5 by Pali Rohár.
Committed on 18/11/2013 at 09:22.
Pushed by pali into branch 'KDE/4.12'.

Do not try to sync metacontact which has display name source from NULL contact
Related: bug 254494, bug 277606, bug 290171
FIXED-IN: 4.12

M  +1    -1    libkopete/kopetemetacontact.cpp

http://commits.kde.org/kopete/1f1bf7b606915520832c386d151ddae7a5add6e5