Do not try to sync metacontact which has display name source from NULL contact

BUG: 218308
BUG: 254494
BUG: 277606
BUG: 290171
FIXED-IN: 4.12